# bhume-boundary

./: .gitignore  CONTRACT.md  README.md  benchmark_search.py  benchmark_vectorized.py  check_neighbors.py  evaluate_decentralized.py  evaluate_details.py  inspect_1177.py  inspect_1763.py  inspect_cost_1763.py  inspect_global_search.py  inspect_search_1177.py  inspect_spatial.py  inspect_truths.py  inspect_votes.py  print_anchors_near_1763.py  print_profile.py  pyproject.toml  quickstart.py  solver.py  solver_backup.py  test_isolated_scaling.py  test_local_idw.py  test_scaling.py
bhume/: __init__.py  baseline.py  geo.py  io.py  score.py
data/: README.md
data/12429_malatavadi_chandgad_kolhapur/: example_truths.geojson  input.geojson  predictions.geojson
data/34855_vadnerbhairav_chandavad_nashik/: example_truths.geojson  input.geojson  predictions.geojson
transcripts/: README.md  chat_history.md  transcript.jsonl
