[project]
name = "bhume-takehome"
version = "0.1.0"
description = "BhuMe boundary take-home — starter kit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0",
    "rasterio>=1.3",
    "shapely>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pillow>=10.0",
]

# The `bhume` helpers are imported directly from the project root (see quickstart.py);
# uv only needs to manage the dependencies above, not build this as a package.
[tool.uv]
package = false
